// file: pkg/config/proto/responses/get_multiple_config_response.proto
edition = "2023";

package gcommon.v1.config;

import "common/proto/error.proto";
import "pkg/config/proto/config_entry.proto";
import "config/proto/config_entry.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

/**
 * GetMultipleConfigResponse returns multiple configuration entries.
 */
message GetMultipleConfigResponse {
  // Retrieved entries mapped by key
  map<string, ConfigEntry> entries = 1;

  // Keys that were not found
  repeated string not_found = 2;

  // Error information
  gcommon.v1.common.Error error = 3;
}
